# open-response-center

./: .containerignore  .env.example  .gitignore  Containerfile  README.md  SECURITY.md  manage.py  podman-compose.yml  pyproject.toml
docs/: API.md  ARCHITECTURE.md  BRANDING.md  DEPLOYMENT.md  PRODUCT_BRIEF.md  PUBLIC_OPENCLAW_ADAPTER_BOUNDARY.md  PUBLIC_RELEASE_CHECKLIST.md  REQUIREMENTS.md
open_response_center/: asgi.py  settings.py  urls.py  wsgi.py
scripts/: compose_smoke_test.py
tests/: test_ticket_flow.py
tickets/: admin.py  api.py  auth.py  forms.py  incident_adapters.py  models.py  notifications.py  services.py  urls.py  views.py
tickets/management/commands/: cleanup_attachments.py  create_operations_agent_token.py  seed_demo.py  sla_report.py  sync_workspace_incidents.py
tickets/migrations/: 0001_initial.py  0002_ticket_actual_outcome_ticket_additional_context_and_more.py  0003_operationalincident.py  0004_operationalincident_access_level_and_more.py  0005_system_visible_to_groups_system_visible_to_users.py  0006_operationsagenttoken.py  0007_slapolicy_ticket_first_response_at_and_more.py  0008_knowledgebasearticle_ticketknowledgebaselink.py  0009_department_system_default_department_and_more.py  0010_ticket_intake_field_values_departmentintakefield.py  0011_remove_ticket_tickets_tic_status_130c04_idx_and_more.py  0012_externalreference.py  0013_caseevent.py
tickets/static/tickets/: app.css
tickets/templates/tickets/: base.html  knowledge_base_detail.html  knowledge_base_form.html  knowledge_base_list.html  login.html  ticket_board.html  (+4 more)
