[project]
name = "open-response-center"
version = "0.1.0"
description = "Internal support-ticket-style incident intake and tracking for team operations systems."
requires-python = ">=3.12"
dependencies = [
    "Django>=5.2,<6.0",
    "gunicorn>=23.0,<24.0",
    "whitenoise[brotli]>=6.9,<7.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-django",
    "ruff",
]

[tool.setuptools]
packages = ["open_response_center", "tickets"]

[tool.pytest.ini_options]
testpaths = ["tests"]
DJANGO_SETTINGS_MODULE = "open_response_center.settings"
python_files = ["test_*.py", "*_test.py"]

[tool.ruff]
line-length = 100
target-version = "py312"
